Fixed video carousel icon spacing.

--- a/src/components/VideoCarousel/VideoCarousel.module.scss
+++ b/src/components/VideoCarousel/VideoCarousel.module.scss
@@ -19,6 +19,7 @@
   line-height: 24px;
 
   display: flex;
+  align-items: center;
   gap: 8px;
 }
 
